--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./build/h2db/data/demo
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
+
+spring.sql.init.mode=always
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
