--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,6 @@
 
-#spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:h2:file:./build/h2db/data/demo
+spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:file:./build/h2db/data/demo
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -11,4 +11,3 @@ spring.h2.console.enabled=true
 
 spring.sql.init.mode=always
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
-
